fix: Adjust property card column widths and add `extra-bottom-space` class to resolve image spacing.

--- a/app/components/solutions/Solution.css
+++ b/app/components/solutions/Solution.css
@@ -17,3 +17,7 @@
 .card-bg-colour {
   background-color: #f6f4f4;
 }
+
+.extra-bottom-space {
+  margin-bottom: -5px;
+}
